# patshaughnessy.github.io

./: .gitignore  CNAME  Cargo.toml  Gemfile  Guardfile  Rakefile  blogc  class_factory.html  code_buddy.html  drupal-test-database.html  index.html  index.xml  paperclip-database-storage.html  repeated_auto_complete.html  ruby-under-a-microscope.html  view_mapper.html  watch.sh
erb/: home_page.erb  homepage.erb  layout.erb  post.erb
four_posts/: 2018-06-06-from-activerecord-to-diesel.markdown
lib/: core_ext.rb  feed.rb  home_page.rb  layout.rb  post.rb
posts/: 2008-09-03-drupal-tdd-1.markdown  2008-09-09-mephisto-on-hostingrails-com.markdown  2008-09-28-problems-installing-the-cutline-theme-in-mephisto.markdown  2008-10-21-autocomplete-plugin-doesn-t-work-for-repeated-fields.markdown  2008-10-31-modifying-the-autocomplete-plugin-to-allow-repeated-fields.markdown  2008-11-16-testing-is-a-lesson-in-humility.markdown  2008-11-18-posted-auto-complete-code-to-github.markdown  2008-12-09-example-drupal-module-to-use-for-tdd-demonstration.markdown  2008-12-12-writing-your-first-phpunit-test-in-drupal.markdown  2008-12-19-using-tdd-to-write-a-drupal-module.markdown  2009-01-09-tdd-keeps-your-php-code-separate-from-drupal.markdown  2009-01-16-using-a-test-database-with-drupal-unit-tests.markdown  2009-01-19-drupal-test-database.markdown  2009-01-19-using-mysql-transactions-with-drupal-unit-tests.markdown  2009-01-30-repeated_auto_complete-changes-merged-into-auto_complete.markdown  2009-01-30-sample-app-for-auto-complete-on-a-complex-form.markdown  (+152 more)
src/: article_layout.rs  (+10 more)
(+230 files in other folders)
