[package]
name = "blogc"
version = "0.1.0"
authors = ["Pat Shaughnessy <pat@patshaughnessy.net>"]

[lib]
name = "blog"
path = "src/lib.rs"

[[bin]]
name = "blogc"
path = "src/bin.rs"

[dependencies]
maud = "*"
pulldown-cmark = "*"
regex = "*"
lazy_static = "*"
syntect = "3.0"
chrono = "*"
clap = "*"
ordinal = "*"
